# Eng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
emscripten/: shell.html
include/: Application.h  AssetLoader.h  AtlasReader.h  Camera.h  Character.h  Clock.h  Collider.h  Drawable.h  GameWorld.h  Log.h  PairHash.h  Player.h  RNG.h  Renderer.h  Sprite.h  TileMap.h  Vector2.h  Vector2f.h  Vector2i.h  World.h  debug.h
resources/atlas/: player.json
resources/levels/: level.json
src/: Application.cpp  AssetLoader.cpp  AtlasReader.cpp  Camera.cpp  Character.cpp  Clock.cpp  Collider.cpp  Drawable.cpp  GameWorld.cpp  Log.cpp  Player.cpp  RNG.cpp  Renderer.cpp  Sprite.cpp  TileMap.cpp  Vector2f.cpp  Vector2i.cpp  World.cpp  main.cpp
